traductor finished