@@ -1,17 +1,22 @@
 package polytech.instructions;
 
+import java.math.BigInteger;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class Adds extends Instruction {
-    public Adds(String line) {
+public class Subs extends Instruction {
+    public Subs(String line) {
         super(line);
-        infos = List.of(1);
+        infos = Arrays.asList(1);
     }
 
     @Override
     public String convertToHexa() {
+        //String base = "0001101";
         String binary = getRegister();
+        //System.out.println(binary);
+        //System.out.println(BinarytoHexa(binary));
         return BinarytoHexa(binary);
     }
 
@@ -20,12 +25,12 @@ public class Adds extends Instruction {
         List<String> res = getNumbers(line);
         //System.out.println("res " + res);
         if (!line.contains("#")) {
-            return "0001100" + res.get(2) + res.get(1) + res.get(0);
+            return "0001101" + res.get(2) + res.get(1) + res.get(0);
         } else if (res.size() == 3) {
-            return "0001110" + res.get(2) + res.get(1) + res.get(0);
+            return "0001111" + res.get(2) + res.get(1) + res.get(0);
         } else {
             while (res.get(1).length() != 8) res.set(1, "0" + res.get(1));
-            return "00110" + res.get(0) + res.get(1);
+            return "00111" + res.get(0) + res.get(1);
         }
     }
 }
